--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,12 +8,10 @@
 <body id="header-body">
   <ul class="navbar">
     <li class="navbar-links"><a href="/">Home</a></li>
-    <li class="navbar-links"><a href="/2015/04/20/my-first-post.html">Sailing</a></li>
-    <li class="navbar-links"><a href="../about.html">About</a></li>
+    <li class="navbar-links"><a href="/2015/04/20/my-first-post.html">Blogs</a></li>
+    <li class="navbar-links"><a href="/about.html">About</a></li>
     <li class="navbar-links"><a href="#footer">Contact</a></li>
 </ul>
-<img class="sailboat-image1" src="https://s-media-cache-ak0.pinimg.com/originals/0d/e9/76/0de976e989ee1961f414da07962579b4.jpg"></img>
-<img class="sailboat-image2" src="https://s-media-cache-ak0.pinimg.com/originals/0d/e9/76/0de976e989ee1961f414da07962579b4.jpg"></img>
   <h3 class="blog-title">{{ site.title }}</h3>
   <div class="container">
 <img id="profile-picture" src="http://s10.postimg.org/x4fkfcypx/Substandard_Full_Size_Render_41_1.jpg?noCache=1453961654">
